force-app/main/default/objects/Apttus__Reviewer__c/Apttus__Reviewer__c.object-meta.xml
<CustomObject>
    <description>Holds the reviewer&apos;s information for parallel review of a document.</description>
    <label>Reviewer</label>
    <nameField>
        <label>Reviewer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>