force-app/main/default/objects/Apttus__Reviewer__c/fields/Apttus__Comment__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comment__c</fullName>
    <description>Comments on Cancel/End Review.</description>
    <inlineHelpText>Comments on Cancel/End Review.</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>