force-app/main/default/objects/Apttus__Reviewer__c/fields/Apttus__EndedCancelledOn__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EndedCancelledOn__c</fullName>
    <description>Review End Date/time</description>
    <inlineHelpText>Review End Date/time</inlineHelpText>
    <label>Ended/Cancelled On</label>
    <type>DateTime</type>
</CustomField>