force-app/main/default/objects/Apttus__Reviewer__c/fields/Apttus__MemberId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__MemberId__c</fullName>
    <description>Member id of MS Teams</description>
    <externalId>true</externalId>
    <inlineHelpText>Member id of MS Teams</inlineHelpText>
    <label>Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>