force-app/main/default/objects/Apttus__Reviewer__c/fields/Apttus__RecipientType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RecipientType__c</fullName>
    <description>Type of Recipient added.</description>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>