force-app/main/default/objects/Apttus__Reviewer__c/fields/Apttus__ReviewCycle__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewCycle__c</fullName>
    <description>Review Cycle Id</description>
    <inlineHelpText>Review Cycle Id</inlineHelpText>
    <label>Review Cycle</label>
    <referenceTo>Apttus__ReviewCycle__c</referenceTo>
    <relationshipLabel>Reviewers</relationshipLabel>
    <relationshipName>Reviewers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>