force-app/main/default/objects/Apttus__Reviewer__c/fields/Apttus__ReviewerEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewerEmail__c</fullName>
    <description>Email Id of the user</description>
    <inlineHelpText>Email Id of the user</inlineHelpText>
    <label>Reviewer Email</label>
    <type>Email</type>
</CustomField>