force-app/main/default/objects/Apttus__Reviewer__c/fields/Apttus__UserorContactId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UserorContactId__c</fullName>
    <description>holds user id or contact id based on the recipient type</description>
    <label>User or Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>